--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,44 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1" />
+    <meta name="HandheldFriendly" content="true" />
+    <script src="js/script.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/style.css"
+      media="screen"
+    />
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,700i&display=swap");
+    </style>
     <title>Spotify</title>
   </head>
   <body>
-    Premium Discover Help Download
+    <header>
+      <div class="logo">
+        <img class="w-100" src="images/spotify-logo.png" alt="logo spotify" />
+      </div>
+      <div id="hamburger">
+        <div id="hamburger-content">
+          <nav>
+            <a href="#">Premium</a>
+            <a href="#">Discover</a>
+            <a href="#">Help</a>
+            <a href="#">Download</a>
+          </nav>
+        </div>
+        <button id="hamburger-button">&#9776;</button>
+        <div id="hamburger-sidebar">
+          <div id="hamburger-sidebar-header"></div>
+          <div id="hamburger-sidebar-body"></div>
+        </div>
+        <div id="hamburger-overlay"></div>
+      </div>
 
-    Music for everyone.
-    Spotify is now free on mobile, tablet and computer.
-    Listen to the right music, wherever you are.
+      <!-- 
+      <div class="logo">
+        <img class="w-100" src="images/spotify-logo.png" alt="logo spotify" />
+      </div>
+      <nav>
+        <a>Premium</a>
+        <a>Discover</a>
+        <a>Help</a>
+        <a>Download</a>
+      </nav> 
+      <div class="dropdown">
+        <img
+          onclick="myFunction()"
+          class="dropbtn"
+          src="images/icons8-menu.svg"
+          alt=""
+        /> 
+      </div>-->
+    </header>
 
-    What’s on Spotify?
+    <section class="section1">
+      <div class="music-text">
+        <h1>Music for everyone.</h1>
+        <p>Spotify is now free on mobile, tablet and computer.</p>
+        <p>Listen to the right music, wherever you are.</p>
+      </div>
+    </section>
 
-    Millions of Songs
-    There are millions of
-    songs on Spotify
+    <footer>
+      <section class="section2">
+        <h2>What’s on Spotify?</h2>
+        <div class="colonnes3">
+          <div class="w-33">
+            <img src="images/music-icon.png" alt="" />
+            <h3>Millions of Songs</h3>
+            <p>There are millions of songs on Spotify</p>
+          </div>
+          <div class="w-33">
+            <img src="images/high-quality-icon.png" alt="" />
+            <h3>HD Music</h3>
+            <p>Listen to music as if you were listening live</p>
+          </div>
+          <div class="w-33">
+            <img src="images/devices-icon.png" alt="" />
+            <h3>Stream Everywhere</h3>
+            <p>Stream music on your smartphone, tablet or computer</p>
+          </div>
+        </div>
+      </section>
 
-    HD Music
-    Listen to music as if you
-    were listening live
-
-    Stream Everywhere
-    Stream music on your
-    smartphone, tablet or
-    computer
-
-    It’s as yeezy as Kanye West.
-    Search
-    Know what you want to listen to?
-    Just search and hit play.
-    Browse
-    Check out the latest charts,
-    brand new releases and great
-    playlists for right now.
-    Discover
-    Enjoy new music every Monday
-    with your own personal playlist.
-    Or sit back and enjoy Radio.
+      <section class="section3">
+        <h2>It’s as yeezy as Kanye West.</h2>
+        <div>
+          <h3>Search</h3>
+          <p>Know what you want to listen to? Just search and hit play.</p>
+        </div>
+        <div>
+          <h3>Browse</h3>
+          <p>
+            Check out the latest charts, brand new releases and great playlists
+            for right now.
+          </p>
+        </div>
+        <div>
+          <h3>Discover</h3>
+          <p>
+            Enjoy new music every Monday with your own personal playlist. Or sit
+            back and enjoy Radio.
+          </p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
