--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -34,32 +34,13 @@
             <a href="#">Download</a>
           </nav>
         </div>
-        <button id="hamburger-button">&#9776;</button>
+        <button id="hamburger-button" onclick="myFunction()">&#9776;</button>
         <div id="hamburger-sidebar">
           <div id="hamburger-sidebar-header"></div>
           <div id="hamburger-sidebar-body"></div>
         </div>
         <div id="hamburger-overlay"></div>
       </div>
-
-      <!-- 
-      <div class="logo">
-        <img class="w-100" src="images/spotify-logo.png" alt="logo spotify" />
-      </div>
-      <nav>
-        <a>Premium</a>
-        <a>Discover</a>
-        <a>Help</a>
-        <a>Download</a>
-      </nav> 
-      <div class="dropdown">
-        <img
-          onclick="myFunction()"
-          class="dropbtn"
-          src="images/icons8-menu.svg"
-          alt=""
-        /> 
-      </div>-->
     </header>
 
     <section class="section1">
