--- a/starter/index.html
+++ b/starter/index.html
@@ -64,49 +64,55 @@
       </div>
     </section>
 
-    <footer>
-      <section class="section2">
-        <h2>What’s on Spotify?</h2>
-        <div class="colonnes3">
-          <div class="w-33">
-            <img src="images/music-icon.png" alt="" />
-            <h3>Millions of Songs</h3>
-            <p>There are millions of songs on Spotify</p>
-          </div>
-          <div class="w-33">
-            <img src="images/high-quality-icon.png" alt="" />
-            <h3>HD Music</h3>
-            <p>Listen to music as if you were listening live</p>
-          </div>
-          <div class="w-33">
-            <img src="images/devices-icon.png" alt="" />
-            <h3>Stream Everywhere</h3>
-            <p>Stream music on your smartphone, tablet or computer</p>
-          </div>
+    <section class="section2">
+      <h2>What’s on Spotify?</h2>
+      <div class="colonnes3">
+        <div class="w-33">
+          <img src="images/music-icon.png" alt="" />
+          <h3>Millions of Songs</h3>
+          <p>There are millions of songs on Spotify</p>
         </div>
-      </section>
+        <div class="w-33">
+          <img src="images/high-quality-icon.png" alt="" />
+          <h3>HD Music</h3>
+          <p>Listen to music as if you were listening live</p>
+        </div>
+        <div class="w-33">
+          <img src="images/devices-icon.png" alt="" />
+          <h3>Stream Everywhere</h3>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </div>
+      </div>
+    </section>
 
-      <section class="section3">
+    <footer>
+      <div class="half yeezy">
         <h2>It’s as yeezy as Kanye West.</h2>
-        <div>
+        <div class="title">
           <h3>Search</h3>
           <p>Know what you want to listen to? Just search and hit play.</p>
         </div>
-        <div>
+        <div class="title">
           <h3>Browse</h3>
           <p>
             Check out the latest charts, brand new releases and great playlists
             for right now.
           </p>
         </div>
-        <div>
+        <div class="title">
           <h3>Discover</h3>
           <p>
             Enjoy new music every Monday with your own personal playlist. Or sit
             back and enjoy Radio.
           </p>
         </div>
-      </section>
+      </div>
+      <div class="spotify-icon">
+        <img src="images/spotify-icon-white.png" alt="" />
+      </div>
+      <div class="half center">
+        <img class="kanye" src="images/spotify-app.jpg" alt="" />
+      </div>
     </footer>
   </body>
 </html>
